--- a/html/index.html
+++ b/html/index.html
@@ -43,7 +43,7 @@
           </button>
           <div class="row" style="position:relative; background:green"><img alt="" src="http://www.placehold.it/960x380" /> 
 
-          <a class="navbar-brand " href="#"><p class="fittext" >Herbert Pixner</p></a>
+          <div id="logo"><p>Herbert Pixner</p></div>
 
           </div>
         </div>
@@ -71,7 +71,11 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1 id="fittext" class="test">Hello, world!</h1>
+
+        <p id="test">herbert pixner</p>
+        <p id="test">herbert pixner 2</p>
+
+        <h1 class="test">Hello, world!</h1>
         <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
         <p><a class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
       </div>
