working font scale

--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,6 @@
 
         <div class="navbar-header">
 
-        
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -43,7 +42,7 @@
           </button>
           <div class="row" style="position:relative; background:green"><img alt="" src="http://www.placehold.it/960x380" /> 
 
-          <div id="logo"><p>Herbert Pixner</p></div>
+          <h1 id="logo">Herbert Pixner</h1>
 
           </div>
         </div>
@@ -55,15 +54,7 @@
             <li><a href="#three-saints-records">three saints records</a></li>
             <li><a href="#shop">shop</a></li>
           </ul>
-          <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
+          
         </div><!--/.navbar-collapse -->
       </div>
     </div>
@@ -72,8 +63,6 @@
     <div class="jumbotron">
       <div class="container">
 
-        <p id="test">herbert pixner</p>
-        <p id="test">herbert pixner 2</p>
 
         <h1 class="test">Hello, world!</h1>
         <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
